# VITools

./: .coverage  .env  .gitignore  MANIFEST.in  README.rst  XCIST_Simulation2.py  example_study_plan.csv  pyproject.toml
.github/workflows/: pages.yml  python-app.yml
docs/: api.rst  conf.py  function_reference.rst  index.rst  usage.rst
notebooks/: 01_phantoms.ipynb  02_scanners.ipynb  03_studies.ipynb  04_voxelized_phantom_radiograph.ipynb  utils.py
src/VITools/: __init__.py  batchmode_CT_dataset_pipeline.sge  dicom_to_voxelized_phantom.py  examples.py  hooks.py  image_acquisition.py  image_reconstruction.py  phantom.py  phantoms.py  pipeline.py  run_batchmode.sh  scanner.py  study.py
src/VITools/defaults/: GE_Lightspeed64  Siemens_DefinitionFlash
tests/: Scanner_Test  conftest.py  study.py  test_clean.py  test_resize_stats.py  test_run_all_skip.py  test_scanner.py  test_study.py  test_study_extended.py  utils.py
