[project]
name = "VITools"
version = "0.3.0"
authors = [
  {name="Brandon Nelson", email="brandon.nelson@fda.hhs.gov"},
]
description = "VITools: tools for conducting virtual imaging trials"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "pytest",
  "pydicom",
  "monai",
  "gecatsim @ git+https://github.com/xcist/main.git"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/brandonjnelsonFDA/VIT-Tools"
Issues = "https://github.com/brandonjnelsonFDA/VIT-Tools/issues"

[project.scripts]
generate = "VITools.study:vit_cli"

[project.entry-points."VITools"] # Must match PROJECT_NAME
examples = "VITools.examples"